--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=8181
+spring.servlet.multipart.max-file-size = 10MB
 # ===============================
 # = DATA SOURCE
 # ===============================
@@ -7,7 +8,7 @@ server.port=8181
 spring.datasource.url=jdbc:mysql://localhost:3306/recruiter
 # Username and secret
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=
 
 # Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.tomcat.test-while-idle=  true
@@ -26,12 +27,12 @@ spring.jpa.show-sql=true
 # the project
 spring.jpa.hibernate.ddl-auto = update
 # Allows Hibernate to generate SQL optimized for a particular DBMS
-# spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-# spring.mail.host=smtp.gmail.com
-# spring.mail.username=
-# spring.mail.password=
-# spring.mail.properties.mail.smtp.auth=true
-# spring.mail.properties.mail.smtp.socketFactory.port=465
-# spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
-# spring.mail.properties.mail.smtp.socketFactory.fallback=false
-# support.email=
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.mail.host=smtp.gmail.com
+spring.mail.username=testspring100300@gmail.com
+spring.mail.password=testspring1234!@#$
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.socketFactory.port=465
+spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
+spring.mail.properties.mail.smtp.socketFactory.fallback=false
+support.email=testspring100300@gmail.com
