--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,10 +29,10 @@ spring.jpa.hibernate.ddl-auto = update
 # Allows Hibernate to generate SQL optimized for a particular DBMS
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.mail.host=smtp.gmail.com
-spring.mail.username=testspring100300@gmail.com
-spring.mail.password=testspring1234!@#$
+spring.mail.username=recruiterteam46@gmail.com
+spring.mail.password=recruiter46
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.socketFactory.port=465
 spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
 spring.mail.properties.mail.smtp.socketFactory.fallback=false
-support.email=testspring100300@gmail.com
+support.email=recruiterteam46@gmail.com
