--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.servlet.multipart.max-file-size = 10MB
 spring.datasource.url=jdbc:mysql://localhost:3306/recruiter
 # Username and secret
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=
 
 # Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.tomcat.test-while-idle=  true
